Grease pencil conversion causes NAN weights on vertices #35686

Closed
opened 2013-06-09 12:54:47 +02:00 by Thomas Beck · 3 comments
Member

%%%Hi guys,

- Operating System, Graphics card ---

Ubuntu 64, 16gbm RAM, 2 GTX 560TI OC

- Blender version with error, and version that worked ---

All tested versions had the error, current svn too

- Short description of error ---

When you convert a grease pencil stroke to a polygon curve and look at the vertices, the first and last vertice are 0, but all other have a -NaN value.

In the file gpencil_edit.c you can see the
if (link_strokes)
gp_stroke_finalize_curve_endpoints(cu);
So I think all other points are simply not set - I'm not sure why the first and last points are treated differently, but maybe someone can clarify that.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Just stroke a GP line and convert it to a polygon curve. Then enter the edit mode on the curve and have a look in the N-panel, property "weigth". First and last vertex are 0, all other are -NaN.

Greetings, Thomas
%%%

%%%Hi guys, - Operating System, Graphics card --- Ubuntu 64, 16gbm RAM, 2 GTX 560TI OC - Blender version with error, and version that worked --- All tested versions had the error, current svn too - Short description of error --- When you convert a grease pencil stroke to a polygon curve and look at the vertices, the first and last vertice are 0, but all other have a -NaN value. In the file gpencil_edit.c you can see the if (link_strokes) gp_stroke_finalize_curve_endpoints(cu); So I think all other points are simply not set - I'm not sure why the first and last points are treated differently, but maybe someone can clarify that. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Just stroke a GP line and convert it to a polygon curve. Then enter the edit mode on the curve and have a look in the N-panel, property "weigth". First and last vertex are 0, all other are -NaN. Greetings, Thomas %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fixed in svn.

Div by zero error in gp_stroke_norm_curve_weights() when minmax_weights- [x] == minmax_weights[1]%%%

%%%Fixed in svn. Div by zero error in gp_stroke_norm_curve_weights() when minmax_weights- [x] == minmax_weights[1]%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35686
No description provided.